--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
 
     <groupId>me.j360.gitflow</groupId>
     <artifactId>gitflow-version</artifactId>
-    <version>1.1.0</version>
+    <version>1.1.0-SNAPSHOT</version>
 
     <scm>
         <connection>scm:git:https://github.com/xuminwlt/j360-gitflow.git</connection>
         <url>https://github.com/xuminwlt/j360-gitflow</url>
         <developerConnection>scm:git:https://github.com/xuminwlt/j360-gitflow.git</developerConnection>
-      <tag>1.1.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <build>
