--- a/j360-module-version-autoupdate-dependment/pom.xml
+++ b/j360-module-version-autoupdate-dependment/pom.xml
@@ -3,11 +3,12 @@
     <parent>
         <artifactId>gitflow-version</artifactId>
         <groupId>me.j360.gitflow</groupId>
-        <version>1.7.2-RELEASE</version>
+        <version>1.7.3-RELEASE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>j360-module-version-autoupdate-dependment</artifactId>
+  <version>1.7.2-RELEASE</version>
 
 
     <dependencies>
@@ -16,4 +17,8 @@
             <artifactId>j360-module-version-autoupdate</artifactId>
         </dependency>
     </dependencies>
+
+  <scm>
+    <tag>1.7.2</tag>
+  </scm>
 </project>
