--- a/pom.xml
+++ b/pom.xml
@@ -5,26 +5,25 @@
     <groupId>me.j360.gitflow</groupId>
     <artifactId>gitflow-version</artifactId>
     <packaging>pom</packaging>
-    <version>1.7.3-RELEASE</version>
+    <version>1.7.4-SNAPSHOT</version>
 
     <scm>
         <connection>scm:git:https://github.com/xuminwlt/j360-gitflow.git</connection>
         <url>https://github.com/xuminwlt/j360-gitflow</url>
         <developerConnection>scm:git:https://github.com/xuminwlt/j360-gitflow.git</developerConnection>
-     <tag>1.7.2</tag>
-  </scm>
+   </scm>
 
     <dependencyManagement>
     <dependencies>
         <dependency>
             <groupId>me.j360.gitflow</groupId>
             <artifactId>j360-module-version-autoupdate</artifactId>
-            <version>1.7.2-RELEASE</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>me.j360.gitflow</groupId>
             <artifactId>j360-module-version-autoupdate-dependment</artifactId>
-            <version>1.7.2-RELEASE</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
     </dependencyManagement>
@@ -62,7 +61,7 @@
                     <autoVersionSubmodules>true</autoVersionSubmodules>
                     <!-- to match this version -->
                     <tagNameFormat>@{project.version}</tagNameFormat>
-                    <developmentVersion>${project.version}</developmentVersion>
+                    <!--developmentVersion>${project.version}</developmentVersion>-->
                     <releaseVersion>${project.version}</releaseVersion>
                 </configuration>
             </plugin>
@@ -72,11 +71,5 @@
         <module>j360-module-version-autoupdate</module>
         <module>j360-module-version-autoupdate-dependment</module>
     </modules>
-
-    <profiles>
-        <profile>
-            <id>release</id>
-        </profile>
-    </profiles>
 
 </project>
