--- a/release.properties
+++ b/release.properties
@@ -1,13 +1,12 @@
 #release configuration
-#Mon Nov 07 10:32:13 CST 2016
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
-scm.tag=1.7.2
+#Mon Nov 07 16:34:15 CST 2016
+scm.tagNameFormat=@{project.version}
 pushChanges=true
 scm.url=scm\:git\:https\://github.com/xuminwlt/j360-gitflow.git
 preparationGoals=clean verify
 remoteTagging=true
 projectVersionPolicyId=default
 scm.commentPrefix=[maven-release-plugin] 
-exec.snapshotReleasePluginAllowed=false
 exec.additionalArguments=-P nexus
+exec.snapshotReleasePluginAllowed=false
 completedPhase=check-poms
