--- a/j360-module-version-autoupdate-dependment/pom.xml
+++ b/j360-module-version-autoupdate-dependment/pom.xml
@@ -3,12 +3,12 @@
     <parent>
         <artifactId>gitflow-version</artifactId>
         <groupId>me.j360.gitflow</groupId>
-        <version>1.7.3-RELEASE</version>
+        <version>1.7.4</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>j360-module-version-autoupdate-dependment</artifactId>
-  <version>1.7.2-RELEASE</version>
+  <version>1.7.4</version>
 
 
     <dependencies>
@@ -19,6 +19,6 @@
     </dependencies>
 
   <scm>
-    <tag>1.7.2</tag>
+    <tag>1.7.4</tag>
   </scm>
 </project>
