--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,14 @@
     <groupId>me.j360.gitflow</groupId>
     <artifactId>gitflow-version</artifactId>
     <packaging>pom</packaging>
-    <version>1.7.4-SNAPSHOT</version>
+    <version>1.7.4</version>
 
     <scm>
         <connection>scm:git:https://github.com/xuminwlt/j360-gitflow.git</connection>
         <url>https://github.com/xuminwlt/j360-gitflow</url>
         <developerConnection>scm:git:https://github.com/xuminwlt/j360-gitflow.git</developerConnection>
-   </scm>
+     <tag>1.7.4</tag>
+  </scm>
 
     <dependencyManagement>
     <dependencies>
