[maven-release-plugin] prepare release 1.7.4

--- a/pom.xml
+++ b/pom.xml
@@ -61,9 +61,10 @@
                     <releaseProfiles>release</releaseProfiles>
                     <autoVersionSubmodules>true</autoVersionSubmodules>
                     <!-- to match this version -->
-                    <tagNameFormat>@{project.version}</tagNameFormat>
-                    <!--developmentVersion>${project.version}</developmentVersion>-->
-                    <releaseVersion>${project.version}</releaseVersion>
+                    <tagNameFormat>@{project.artifactId}-@{project.version}</tagNameFormat>
+                    <developmentVersion>1.7.5-SNAPSHOT</developmentVersion>
+                    <releaseVersion>${project.version}-RELEASE</releaseVersion>
+
                 </configuration>
             </plugin>
         </plugins>
