--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
     <groupId>me.j360.gitflow</groupId>
     <artifactId>gitflow-version</artifactId>
     <packaging>pom</packaging>
-    <version>1.7.5-SNAPSHOT</version>
+    <version>1.7.5</version>
 
     <scm>
         <connection>scm:git:https://github.com/xuminwlt/j360-gitflow.git</connection>
         <url>https://github.com/xuminwlt/j360-gitflow</url>
         <developerConnection>scm:git:https://github.com/xuminwlt/j360-gitflow.git</developerConnection>
-     <tag>1.7.4</tag>
+     <tag>1.7.5</tag>
   </scm>
 
     <dependencyManagement>
@@ -61,7 +61,7 @@
                     <releaseProfiles>release</releaseProfiles>
                     <autoVersionSubmodules>true</autoVersionSubmodules>
                     <!-- to match this version -->
-                    <tagNameFormat>@{project.artifactId}-@{project.version}</tagNameFormat>
+                    <tagNameFormat>@{project.version}</tagNameFormat>
                     <developmentVersion>1.7.6-SNAPSHOT</developmentVersion>
                     <releaseVersion>${project.version}-RELEASE</releaseVersion>
 
