--- a/j360-module-version-autoupdate/pom.xml
+++ b/j360-module-version-autoupdate/pom.xml
@@ -3,12 +3,16 @@
     <parent>
         <artifactId>gitflow-version</artifactId>
         <groupId>me.j360.gitflow</groupId>
-        <version>1.7.5</version>
+        <version>1.7.5-RELEASE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>j360-module-version-autoupdate</artifactId>
-  <version>1.7.5</version>
+  <version>1.7.5-RELEASE</version>
 
 
+
+  <scm>
+    <tag>1.7.5</tag>
+  </scm>
 </project>
