--- a/j360-module-version-autoupdate/pom.xml
+++ b/j360-module-version-autoupdate/pom.xml
@@ -3,16 +3,10 @@
     <parent>
         <artifactId>gitflow-version</artifactId>
         <groupId>me.j360.gitflow</groupId>
-        <version>1.7.5-RELEASE</version>
+        <version>1.7.6-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>j360-module-version-autoupdate</artifactId>
-  <version>1.7.5-RELEASE</version>
-
-
-
-  <scm>
-    <tag>1.7.5</tag>
-  </scm>
+  <version>1.7.5</version>
 </project>
