--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>me.j360.gitflow</groupId>
     <artifactId>gitflow-version</artifactId>
     <packaging>pom</packaging>
-    <version>1.7.6-RELEASE</version>
+    <version>1.7.7-SNAPSHOT</version>
 
     <scm>
         <connection>scm:git:https://github.com/xuminwlt/j360-gitflow.git</connection>
