--- a/j360-module-version-autoupdate-dependment/pom.xml
+++ b/j360-module-version-autoupdate-dependment/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>gitflow-version</artifactId>
         <groupId>me.j360.gitflow</groupId>
-        <version>1.7.6-RELEASE</version>
+        <version>1.7.7-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>me.j360.gitflow</groupId>
             <artifactId>j360-module-version-autoupdate</artifactId>
-            <version>1.7.6-RELEASE</version>
+            <version>1.7.7-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
