--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
     <groupId>me.j360.gitflow</groupId>
     <artifactId>gitflow-version</artifactId>
     <packaging>pom</packaging>
-    <version>1.7.7-SNAPSHOT</version>
+    <version>1.7.6-RELEASE</version>
 
     <scm>
         <connection>scm:git:https://github.com/xuminwlt/j360-gitflow.git</connection>
         <url>https://github.com/xuminwlt/j360-gitflow</url>
         <developerConnection>scm:git:https://github.com/xuminwlt/j360-gitflow.git</developerConnection>
 
-    <tag>1.7.5</tag>
+    <tag>1.7.6</tag>
   </scm>
 
     <dependencyManagement>
